<resources>
    <string name="seller_client_knowledge_hierarchy">Knowledge hierarchy</string>
    <string name="seller_client_home_pager">Home pager</string>
    <string name="seller_client_navigation">Navigation</string>
    <string name="seller_client_project">Project</string>
    <string name="seller_client_my_collect">Collect</string>
    <string name="seller_client_login_in">Login</string>
    <string name="seller_client_setting">Setting</string>
    <string name="seller_client_about_us">About Us</string>
    <string name="seller_client_logout">Logout</string>

    <string name="seller_client_app_name">sellerClient</string>

    <string name="seller_client_mine_order_after_seller">售后</string>
    <string name="seller_client_mine_order_be_evaluated">待评价</string>
    <string name="seller_client_mine_order_to_receive_goods">待收货</string>
    <string name="seller_client_mine_order_to_be_delivered">待发货</string>
    <string name="seller_client_mine_order_pending_payment">待付款</string>
    <string name="seller_client_head_title_mine">我的</string>
    <string name="seller_client_head_title_home">首页</string>
    <string name="seller_client_mine_free">自由</string>
    <string name="seller_client_mine_phone">15800000000</string>
    <string name="seller_client_mine_setting">设置</string>
    <string name="seller_client_mine_fans">粉丝 0</string>
    <string name="seller_client_mine_attention">关注 0</string>
    <string name="seller_client_mine_1">|</string>
    <string name="seller_client_mine_order">我的订单</string>
    <string name="seller_client_mine_see_all_orders">查看全部订单</string>
    <string name="seller_client_mine_about_penalties_for_violation">关于违规处罚</string>
    <string name="seller_client_mine_recharge_immediately">立即充值</string>
    <string name="seller_client_mine_balance">余额</string>
    <string name="seller_client_mine_my_offer">我的报价</string>
    <string name="seller_client_mine_my_auction">我的竞拍</string>
    <string name="seller_client_mine_my_identification">我的鉴定</string>
    <string name="seller_client_mine_collection">收藏</string>
    <string name="seller_client_mine_falling_red_envelopes">天降红包</string>
    <string name="seller_client_mine_I_am_a_seller">我是卖家</string>

    <string name="seller_client_mine_headlines">头条</string>
    <string name="title_activity_exhibition_management">ExhibitionManagement</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="seller_client_balance">余额</string>
    <string name="seller_client_quotation">报价管理</string>
    <string name="seller_client_commodity_management">藏品管理</string>
    <string name="seller_client_exhibition_management">展厅管理</string>
    <string name="seller_client_Special_management">专场管理</string>
    <string name="seller_client_application_hall">申请大厅</string>
    <string name="seller_client_red_envelopes">用户红包</string>
    <string name="seller_client_red_envelopes_add">添加红包</string>
    <string name="seller_client_special_management_add">添加专场</string>
    <string name="seller_client_balance_details">余额明细</string>
    <string name="seller_client_balance_recharge">充值</string>
    <string name="seller_client_balance_withdraw">提现</string>
    <string name="seller_client_balance_xiao_bao_jin">消保金</string>
    <string name="seller_client_balance_add_bank_card">银行卡</string>
    <string name="seller_client_balance_verified">实名认证</string>
    <string name="seller_client_balance_payment_security">支付安全</string>


</resources>
