<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/parallax"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/seller_client_app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/image_weibo_home_2"
        app:layout_collapseMode="parallax" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePreviewInEditMode="false">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/seller_client_head_bg"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.CollapsingToolbarLayout
                        android:id="@+id/collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentScrim="?attr/colorPrimary"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed"
                        app:titleEnabled="false">

                        <include layout="@layout/seller_client_include_mine_head" />

                    </android.support.design.widget.CollapsingToolbarLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_all_orders"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/public_white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:text="@string/seller_client_mine_order"
                        android:textColor="@color/seller_client_mine_order"
                        android:textSize="@dimen/public_font_16sp" />

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/dp_168"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:layout_marginRight="@dimen/dp_15"
                        android:src="@mipmap/xuanze" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_toLeftOf="@+id/imageView14"
                        android:layout_toStartOf="@+id/imageView14"
                        android:text="@string/seller_client_mine_see_all_orders"
                        android:textColor="@color/seller_client_mine_see_all_orders"
                        android:textSize="@dimen/public_font_12sp" />

                </RelativeLayout>

                <include layout="@layout/public_line_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_66"
                    android:background="@color/public_white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_dai_fu_kuan"
                        style="@style/public_MineOrderLinearLayout">

                        <ImageView
                            style="@style/public_MineOrderImage"
                            android:src="@mipmap/order_dai_fu_kuan" />

                        <TextView
                            style="@style/public_MineOrderText"
                            android:text="@string/seller_client_mine_order_pending_payment" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dai_fa_huo"
                        style="@style/public_MineOrderLinearLayout">

                        <ImageView
                            style="@style/public_MineOrderImage"
                            android:src="@mipmap/order_dai_fa_huo" />

                        <TextView
                            style="@style/public_MineOrderText"
                            android:text="@string/seller_client_mine_order_to_be_delivered" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dai_ping_jia"
                        style="@style/public_MineOrderLinearLayout">

                        <ImageView
                            style="@style/public_MineOrderImage"
                            android:src="@mipmap/order_dai_shou_huo" />

                        <TextView
                            style="@style/public_MineOrderText"
                            android:text="@string/seller_client_mine_order_to_receive_goods" />

                    </LinearLayout>

                    <LinearLayout style="@style/public_MineOrderLinearLayout">

                        <ImageView
                            style="@style/public_MineOrderImage"
                            android:src="@mipmap/order_dai_ping_jia" />

                        <TextView
                            style="@style/public_MineOrderText"
                            android:text="@string/seller_client_mine_order_be_evaluated" />

                    </LinearLayout>

                    <LinearLayout style="@style/public_MineOrderLinearLayout">

                        <ImageView
                            style="@style/public_MineOrderImage"
                            android:src="@mipmap/order_shou_hou" />

                        <TextView
                            style="@style/public_MineOrderText"
                            android:text="@string/seller_client_mine_order_after_seller" />

                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/public_line_horizontal" />

                <include layout="@layout/seller_client_include_tou_tiao" />


                <RelativeLayout
                    android:id="@+id/rl_bao_xiu_dan"
                    style="@style/public_MineItemRelativeLayout"
                    android:layout_marginTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/img_wo_de_bao_xiu_dan"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon1" />

                    <TextView
                        android:id="@+id/fragmentmyImageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@drawable/public_shape_red_bg_corner_5dp"
                        android:padding="@dimen/dp_5"
                        android:text="@string/seller_client_mine_recharge_immediately"
                        android:textColor="@color/public_white"
                        android:textSize="@dimen/public_font_14sp" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_bao_xiu_dan"
                        android:text="@string/seller_client_mine_balance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="right"
                        android:text="￥0.00元"
                        android:textColor="@color/seller_client_mine_balance_value"
                        android:textSize="@dimen/public_font_12sp" />

                </RelativeLayout>

                <include layout="@layout/public_line_horizontal" />

                <RelativeLayout style="@style/public_MineItemRelativeLayout">

                    <ImageView
                        android:id="@+id/img_wo_de_bao_jia"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon2" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_bao_jia"
                        android:text="@string/seller_client_mine_my_offer" />


                </RelativeLayout>

                <RelativeLayout
                    style="@style/public_MineItemRelativeLayout"
                    android:layout_marginTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/img_wo_de_jing_pai"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon3" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_jing_pai"
                        android:text="@string/seller_client_mine_my_auction" />


                </RelativeLayout>

                <include layout="@layout/public_line_horizontal" />

                <RelativeLayout style="@style/public_MineItemRelativeLayout">

                    <ImageView
                        android:id="@+id/img_wo_de_jian_ding"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon5" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_jian_ding"
                        android:text="@string/seller_client_mine_my_identification" />


                </RelativeLayout>

                <include layout="@layout/public_line_horizontal" />

                <RelativeLayout style="@style/public_MineItemRelativeLayout">

                    <ImageView
                        android:id="@+id/img_wo_de_shou_cang"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon6" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_shou_cang"
                        android:text="@string/seller_client_mine_collection" />


                </RelativeLayout>

                <include layout="@layout/public_line_horizontal" />

                <RelativeLayout style="@style/public_MineItemRelativeLayout">

                    <ImageView
                        android:id="@+id/img_wo_de_hong_bao"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon7" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_de_hong_bao"
                        android:text="@string/seller_client_mine_falling_red_envelopes" />


                </RelativeLayout>


                <RelativeLayout
                    style="@style/public_MineItemRelativeLayout"
                    android:layout_marginTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/img_wo_shi_mai_jia"
                        style="@style/public_MineItemImage"
                        android:src="@mipmap/mem_icon9" />

                    <include layout="@layout/seller_client_include_next_img" />

                    <TextView
                        style="@style/public_MineItemText"
                        android:layout_toRightOf="@+id/img_wo_shi_mai_jia"
                        android:text="@string/seller_client_mine_I_am_a_seller" />


                </RelativeLayout>
            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/public_AppTheme.Toolbar"
        android:layout_marginBottom="0dp"
        android:background="@color/seller_client_colorPrimary"
        app:layout_collapseMode="pin">

        <android.support.v7.widget.ButtonBarLayout
            android:id="@+id/buttonBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/seller_client_head_title_mine"
                android:textColor="@color/public_white"
                android:textSize="@dimen/public_font_16sp" />
        </android.support.v7.widget.ButtonBarLayout>
    </android.support.v7.widget.Toolbar>
</FrameLayout>